--- a/form.html
+++ b/form.html
@@ -1,3 +1,6 @@
+<!-- Creator: Embox -->
+
+
 <html>
 <body>
 <style>
@@ -16,8 +19,8 @@ h1 {
 
 
 <form id="frm1">
-    First name: <input type="text" name="fname" value=""><br>
-    Last name: <input type="text" name="lname" value=""><br><br>
+    First name: <input type="text" name="fname" value="" class="input1" ><br>
+    Last name: <input type="text" name="lname" value="" class="input2" ><br><br>
   </form>
 
   
@@ -27,7 +30,7 @@ h1 {
   
 
   
-  <button onclick="submitFuncton()">Submit</button>
+  <button onclick="submitFuncton()" class="btn">Submit</button>
   
   
   <p id="checkInfo"></p>
@@ -40,8 +43,20 @@ h1 {
     for (i = 0; i < x.length ;i++) {
       text += x.elements[i].value + "<br>";
     }
-    document.getElementById("checkInfo").innerHTML = text + "Is this all your information?";
+    document.getElementById("checkInfo").innerHTML = text + input.name + "Is this all your information?";
   }
+
+
+  const btn = document.querySelector(".btn");
+
+const input1 = document.querySelector(".input1");
+const input2 = document.querySelector(".input2");
+
+btn.addEventListener("click", () => {
+  input1.value = "input";
+  input2.value = "input";
+});
+
   </script>
   
   </body>
