--- a/form.html
+++ b/form.html
@@ -1,24 +1,12 @@
 <!-- Creator: Embox -->
 <!-- Version: N/A -->
 
-
+<!DOCTYPE html>
 <html>
 <body>
-<style>
-body {
-  color: black;
-  font-family: "Times New Roman", Times, serif;
-  font-size: 15px;
-}
 
-h1 {
-    color: black;
-    font-family: "Times New Roman", Times, serif;
-    font-size: 15px;
-}
-</style>
-
-<h1 style="font-family:verdana">Medical Forms</h1>
+<h1 id="title">Medical Forms</h1>
+<link rel="stylesheet" href="style.css">
 
 
 <form id="frm1">
