Added more info classes & more qustions

--- a/form.html
+++ b/form.html
@@ -5,7 +5,6 @@
   <head><link rel="stylesheet" href="style.css"></head>
   <body>
     
-
     <h1 id="title">Medical Forms</h1>
 
     <form id="frm1">
@@ -15,6 +14,12 @@
       <input type="text" name="lname" value="" class="last-name" /><br>
       Age:
       <input type="number" name="uage" value="" class="user-age" /><br/>
+      Sex:
+      <input type="text" name="usex" value="Male / Female / Other" class = "user-sex" /><br/>
+      Email:
+      <input type ="text" name="uemail" value = "example@example.com" class = user-email /><br/>
+      Phone Number:
+      <input type = "number" name="unumber" value="XXX-XXX-XXXX" class = user-number /><br/>
     </form>
 
     <p>Click "Submit" When you successfully enter all the information accurately.</p>
@@ -25,7 +30,11 @@
       <p class="first"></p>
       <p class="last"></p>
       <p class = "userAgeInfo"></p>
+      <p class = "userSexInfo"></p>
+      <p class = "email"></p>
+      <p class = "number"></p>
       <p id="checkInfo"></p>
+      
     </div>
 
     <script src="clickfunction.js"></script>
